# whistlevault

./: .gitignore  CLAUDE.md  COMPLIANCE_CHECKLIST.md  DEPLOY.md  DESIGN.md  HARDENING_GUIDE.md  PRODUCT.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES.md  docker-compose.yml  hetzsuegoclaw.docx  prova-allegato.txt  sessioneperplexity.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/admin/: router.py  schemas.py  serializers.py  service.py
backend/app/analyst/: router.py  service.py
backend/app/audit/: __init__.py
backend/app/auth/: deps.py  escrow.py  passwords.py  router.py  sessions.py  totp.py
backend/app/cases/: router.py  schemas.py  service.py
backend/app/core/: config.py  ratelimit.py  security.py  tenancy.py
backend/app/crypto/: __init__.py
backend/app/db/: base.py  enums.py  models.py  seed.py
backend/app/files/: storage.py
backend/app/jobs/: scheduler.py  tasks.py
backend/app/notifications/: mailer.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: init_db.py  provision_demo.py  stress_demo.py  verify_demo.py
backend/tests/: conftest.py  test_2fa.py  test_access.py  test_admin.py  test_analyst.py  test_auth.py  test_cases.py  test_conditional.py  test_crypto.py  test_db.py  test_escrow.py  test_export.py  test_jobs.py  test_notifications.py  test_onboarding.py  test_password_reset.py  test_provision_demo.py  test_recovery.py  test_redaction.py  test_reports.py  test_scoring.py  test_security_fixes.py  test_seed_questionnaire.py  test_voice.py  test_zk.py
(+95 files in other folders)
